--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,24 @@
-events {}
+events {
+    worker_connections 1024;  # Maximum number of simultaneous connections per worker process
+}
 
 http {
     server {
-        # listen 443 ssl;
+        listen 80;
         server_name localhost;
 
-        # ssl_certificate /etc/ssl/certs/cert.pem;
-        # ssl_certificate_key /etc/ssl/private/key.pem;
+        # Redirect all HTTP requests to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/certs/localhost.crt;
+        ssl_certificate_key /etc/nginx/certs/localhost.key;
 
         location / {
             proxy_pass http://cputrackerapp:5001;
