changes on macmini issues with pytesseract

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,9 @@ http {
         listen 80;
         server_name localhost;
 
+        # Allow larger uploads
+        client_max_body_size 50m;
+
         # Redirect all HTTP requests to HTTPS
         location / {
             return 301 https://$host$request_uri;
@@ -16,6 +19,9 @@ http {
     server {
         listen 443 ssl;
         server_name localhost;
+
+        # Allow larger uploads
+        client_max_body_size 50m;
 
         ssl_certificate /etc/nginx/certs/localhost.crt;
         ssl_certificate_key /etc/nginx/certs/localhost.key;
